2018-9-17 添加博客内容，作者介绍，最新文章

--- a/static/scss/main.css
+++ b/static/scss/main.css
@@ -3,3 +3,14 @@
   content: "";
   display: block;
 }
+.left{
+  float:left;
+}
+.right{
+  float:right;
+}
+.next_world{
+  color: #a3a3a3;
+  font-size: 12px;
+  line-height: 12px;
+}
