--- a/static/scss/reset.css
+++ b/static/scss/reset.css
@@ -88,4 +88,5 @@ html, body {
 body {
   -webkit-text-size-adjust: none;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  /*background: rgba(0,0,0,0.1);*/
 }
